src/components/main.css
/* header background <a href="https://www.freepik.com/free-photo/tasty-appetizing-party-accessories-on-bright-pink-background_1349447.htm">Designed by Freepik</a>*/
/* blackboard background <a href="https://www.freepik.com/free-vector/different-school-elements-in-chalkboard-style_1914483.htm">Designed by Freepik</a>*/
/* wall background <a href="https://www.freepik.com/free-vector/different-school-elements-in-chalkboard-style_1914483.htm">Designed by Freepik</a>*/

/* general, used across the whole app */
.app{
	width: 100%;
	height: 100%;
	margin:0px;
	padding: 0px;
	font-size:1.7rem;
}

/* override button font size of other modules */
.btn{
	font-size:1.7rem;
}

section{
	margin:20px;
	padding-left:20px; 
	padding-right: 20px;
	padding-top: 0px;
	padding-bottom: 40px;
}

@media screen and (min-width:600px){
	section{
		margin:30px;
		padding-left:30px;
		padding-right: 30px;
	}
}

section header{
	text-align: center;
}

section h2{
	font-size: 2.5rem;
}

form{
	border:1px solid #edf7fc;
	border-radius: 5px;
	background-color: #edf7fc;
	padding:25px;
	margin-left:auto;
	margin-right:auto;
	text-align: center;
	width:300px;
}

form input{
	margin-bottom: 15px;
}

form .form-control{
	font-size:1.5rem;
	width:80%;
	margin-left:auto;
	margin-right: auto;
}

@media screen and (min-width: 600px){
	form{
		width:500px;
	}
}

.remainder{
	font-size: 1rem;
	color:red;
	width:80%;
	text-align: left;
}

.hide{
	display: none
}

.ticket-unsorted{
	background-color: #6A4A63;
	border:1px solid #6A4A63;
	color:white;
}

.ticket-home{
	background-color:#F86C9B;
	border: 1px solid #F86C9B;
}

.ticket-outing{
	background-color: #00B48C;
	border:1px solid #00B48C;
}

.ticket-all{
	background-color: #007D5A;
	border: 1px solid #007D5A;
	color:white;
}

/* header, nav and footer */
.banner{
	background-image: url("https://res.cloudinary.com/rollercoaster/image/upload/v1530407579/pink-bg.jpg");
	background-repeat: no-repeat;
	background-size: cover;
	width:100%;
}

.banner h1{	
	height:10vh;
	font-size: 3rem;
	text-shadow: 2px 2px 2px grey;
	color:white;
	text-align: center;
	margin-top:20vh;
	min-width:360px;
	padding:0px;
}

@media screen and (max-width:400px){
	.banner h1{
		font-size: 2.5rem;
		text-shadow: 4px 2px 2px grey;
	}	
}

@media screen and (min-width:600px){
	.banner h1{
		font-size: 4rem;
		text-shadow: 4px 2px 2px grey;
	}
}

.banner::before,.banner::after{
	display: table;
	content:"";
}

nav{
	background-color: #9BDEAC;
	color:black;
	font-size:2rem;
	padding:10px;
}

nav a{
	color:black;
	font-weight: bold;
	text-decoration: none;
}

nav a:hover{
	color:white;
	text-decoration: none;
}

nav li{
	padding-left:15px;
	padding-right: 15px;
	list-style: none;
	list-style-position: outside;
	cursor: pointer;
}

nav li:hover{
	color:white;
	background-color: #6A4A63;
}

nav ul{
	display: flex;
	justify-content: center;
	padding:0px;
	margin:0px;
}

footer{
  font-size:0.6rem;
  color:lightgrey;
  text-align:center;
  padding-bottom: 10px;
  margin-top:0px;
	background-image: url("https://res.cloudinary.com/rollercoaster/image/upload/v1530407579/blackboard.jpg");
	background-repeat: repeat;  
}

footer a{
  color:lightgrey;
}

/* not-found-route */
.not-found-route{
	border:5px solid orange;
	margin:30px;
	padding:20px;
}

.not-found-route header{
	text-align: center;
}

/* landing page */
.landing-page p{
	text-align: center;
}

/* login-form */
.login-form Button{
	margin-right:10px;
}

/* registration-page */
.registration-page p{
	text-align: center;
}

/* my-bucket-page */
.my-bucket-page{
	width:100%;
	margin:0px;
	background-image: url("https://res.cloudinary.com/rollercoaster/image/upload/v1530407579/blackboard.jpg");
	background-repeat: repeat;
}

.my-bucket-page::before{
	content: "";
	display:table;
}

.my-bucket-page header{
	color:white;
}

.my-bucket-page > button{
	display: block;
	width:300px;
	margin-top:10px;
	margin-bottom: 10px;
	margin-left: auto;
	margin-right: auto;
	padding:5px;
}

.new-ticket-btn, .new-ticket-btn:active, .new-ticket-btn:hover{
	background-color:#419b56 !important;
	color:white !important;
	font-weight: bold;
}

/* type-filter (inside my-bucket-page) */
.type-filter-form{
	background-color: #E2D7FF;
	border-radius: 5px;
}

@media screen and (min-width:600px){
	.type-filter-form{
		width:90%;
	}
}

.type-filter-form button{
	margin-bottom: 20px;
	border:2px solid violet;
	box-shadow: 1px 1px 1px purple
}

.type-filter-form .flex-container div{
	width:140px;
	height:80px;
	text-align: center;
	border-radius: 10px;
	margin:5px;
	display: flex;
	flex-direction: column;
	justify-content: center;
	align-items: center;
}

.type-filter-form .flex-container{
	display: flex;
	flex-direction: row;
	justify-content: center;
}

/* new-ticket-form (inside my-bucket-page) */
.new-ticket-form select{
	margin-bottom:15px;
	font-size:1.5rem;
}

.new-ticket-form input, .new-ticket-form textarea{
	font-size:1.5rem;
}

.new-ticket-form button{
	margin-left:20px;
	margin-right:20px;
}

.new-ticket-form button[type="submit"]{
	background-color: #419b56;
	color:white;
}

.new-ticket-form button[type="reset"]{
	border: 2px solid #419b56;
}


.new-ticket-form div label{
	width:80%;
}

.new-ticket-form .form-control{
	width:100%;
}

.new-ticket-form{
	margin-bottom: 10px;
}

@media screen and (min-width: 600px){
	.new-ticket-form{
		width:90%;
	}
}


/* tickets (inside my-bucket-page) */
.ticket-list{
	margin-left:10px;
	margin-right: 10px
}

@media screen and (min-width:576px) and (max-width:768px){
	.card-columns{
		column-count: 2;
	}
}

@media screen and (min-width:768px){
	.card-columns{
		column-count: 3;
	}
}

.card .ticket-type{
	text-align: right;
	font-size:1.4rem;
	display: flex;
	flex-direction: row;
	justify-content: space-between;
}

.card .ticket-type a{
	color:white;
}

.card .dummy-link-container{
	display: flex;
	flex-direction: row;
	justify-content: space-between;
}
.card .dummy-link{
	font-size:1.3rem
}

.ticket-details{
	margin-bottom:5px;
}


.modal-btns{
	display: flex;
	flex-direction: row;
	justify-content: center;
	margin-bottom: 15px;
}

.modal-btns .btn{
	font-size:1.3rem;
}

/* modals */
.modal-div{
	text-align: center;
	margin:5px;
}

.ReactModal__Content{
	text-align: center;
	width:80%;
	font-size:2rem;
}

.ReactModal__Content form{
	margin-left:0px;
	margin-right: 0px;
	width:80%;
	overflow: auto;
}

.ReactModal__Content button{
	display: inline-block;
	margin-top:10px;
	margin-left:5px;
	margin-right:5px;
}

.ReactModal__Content .confirm-delete-btn{
	background-color: #419b56;
	color:white;
}

.edit-ticket-modal-form{
	font-size:1.5rem;
	margin:0px;
}

.edit-ticket-modal-form input{
	font-size:1.5rem;
}

.edit-ticket-modal-form label{
	width:90%;
}

/* random-pick (in my-bucket-page) */
/* CSS spinner from https://loading.io/css/*/
.lds-circle {
  display: inline-block;
  width: 51px;
  height: 51px;
  margin: 6px;
  border-radius: 50%;
  background: #cef;
  animation: lds-circle 2.4s cubic-bezier(0, 0.2, 0.8, 1) infinite;
}
@keyframes lds-circle {
  0%, 100% {
    animation-timing-function: cubic-bezier(0.5, 0, 1, 0.5);
  }
  0% {
    transform: rotateY(0deg);
  }
  50% {
    transform: rotateY(1800deg);
    animation-timing-function: cubic-bezier(0, 0.5, 0.5, 1);
  }
  100% {
    transform: rotateY(3600deg);
  }
}

/* my-wall-page */
.my-wall-page{
	width:100%;
	margin:0px;
	background-image: url("https://res.cloudinary.com/rollercoaster/image/upload/v1530407580/wall_background.jpg");
	background-repeat: repeat;
	background-size: contain;
}

.my-wall-page::before{
	content: "";
	display:table;
}

.my-wall-page header{
	color:black;
	text-shadow: 1px 1px 1px grey;
	font-size:2rem;
}

.wall-no-record{
	background-color: white;
	padding:10px;
	font-size:1.5rem;
}

/* moment-collection (inside my-wall-page) */

.moment-collection-card .card-header{
	display: flex;
	flex-direction: row;
	justify-content: space-between;
	background-color: #764289;
	color:white;
}

.collection-photo-container-single{
	text-align: center;
}

.delete-one-photo-btn{
	height:5px;
	width:20px;
	line-height: 5px;
}

.img-thumbnail{
	width:100px;
	height:100px
}

.moment-collection-btn-group{
	display: flex;
	flex-direction: row;
	justify-content: center;
}

.moment-collection-btn-group button{
	margin:5px;
}

.moment-collection-btn-group .modal-div button{
	margin:0px;
}

.collection-photo-container-multi{
	display: flex;
	flex-direction: row;
	justify-content: space-between;
}

.collection-photo-container-single{
	padding:5px;
}

